rest-apiweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: rest-apiweb
  name: rest-apiweb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rest-apiweb
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose-windows-amd64.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/net-test: "true"
        io.kompose.service: rest-apiweb
    spec:
      containers:
      - env:
        - name: SPRING_DATASOURCE_PASSWORD
          value: test
        - name: SPRING_DATASOURCE_URL
          value: jdbc:postgresql://psqldbserver:5432/test
        - name: SPRING_DATASOURCE_USERNAME
          value: test
        image: rest-api
        imagePullPolicy: ""
        name: rest-api
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
